--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Simple website</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body class="dark-theme">
+<body class="light-theme">
     <h1>Task List</h1>
     <p id="msg"> Current tasks:</p>
     <ul>
